--- a/package.xml
+++ b/package.xml
@@ -9,10 +9,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>cuda</build_depend>
+  <!-- <build_depend>cuda</build_depend> -->
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  <exec_depend>cuda</exec_depend>
+  <depend>rclcpp_components</depend>
+  <!-- <exec_depend>cuda</exec_depend> -->
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
